test/TestSuite/Syntax/Errors/task_without_chargeset.tjp
project test "Test" "1.0" 2007-11-18 +2m

account bar "Bar"

task foo "Foo" {
  start ${projectstart}
# MARK: error 8 task_without_chargeset
  charge 1000 onstart
}
